# fightClub

./: .gitignore  Dockerfile  README.md  benchmark.xlsx  requirements.txt  runenv.sh
.github/workflows/: ci.yml
code/: cpu_model.sh  gpu_model.sh
code/results/: gpu_mpi.ini  omp_mpi.ini  plot.py  plot_each_node.py
code/results/gpu/: NVTX_Batch_27498448.init  NVTX_Batch_27501485.init  best_cpu.init  multigpu_scaling_27508303.init  multigpu_scaling_27508581.init  multigpu_scaling_27508614.init  multigpu_scaling_27508654.init  multigpu_scaling_27508678.init  visualize_cpu_gpu.py  visualize_scaling.py
code/serial/: CMakeLists.txt  Makefile  batch.sh  collect_results.sh  gpu.sh  gpu_batch.sh  model.F90  model.f90  module_nvtx.f90  module_output.F90  module_parameters.f90  module_physics.f90  module_types.F90  nccmp3.py  nvtx_batch.sh  parallel_timer.f90  submit_sweep.sh
code/serial/doc/: .gitignore  Doxyfile
code/slurm/: boost-scaling-sharedmem-gcc.sh  dcgp-scaling-sharedmem-gcc.sh
perf_results/: NVTX_MultiGPU.nsys-view  base_perf.txt
